--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="../bootstrap-4.0.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap-4.0.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
@@ -378,9 +378,9 @@
             </div>
         </div>
     </div>
-    <script src="../bootstrap-4.0.0-dist/js/popper.min.js"></script>
-    <script src="../bootstrap-4.0.0-dist/js/jquery-3.6.3.min.js"></script>
-    <script src="../bootstrap-4.0.0-dist/js/bootstrap.js"></script>
+    <script src="bootstrap-4.0.0-dist/js/popper.min.js"></script>
+    <script src="bootstrap-4.0.0-dist/js/jquery-3.6.3.min.js"></script>
+    <script src="bootstrap-4.0.0-dist/js/bootstrap.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
